<resources>
    <string name="app_name">CSUMB CS Online Degree Requirements</string>
    <string name="logo_desc">CSUMB Logo</string>
    <string name="main_desc">The CS Online Degree Completion program from California State University, Monterey Bay offers a unique blend of computer science theory and hands-on information technology practice, with a concentration in software engineering. This combination prepares you to participate in the fast-paced information economy in jobs such as Mobile App Developer, Software Engineer, or Technology Project Manager.</string>
    <string name="course_header">The following courses are required for CS majors who have been accepted into the CS Online Degree Completion program.</string>
    <string name="cst300">CST 300: Major ProSeminar (4 units)</string>
    <string name="cst338">CST 338: Software Design (4 units)</string>
    <string name="cst311">CST 311: Intro to Computer Networks (4 units)</string>
    <string name="cst334">CST 334: Operating Systems (4 units)</string>
    <string name="cst336">CST 336: Internet Programming (4 units)</string>
    <string name="cst363">CST 363: Introduction to Database Systems (4 units)</string>
    <string name="cst370">CST 370: Design and Analysis of Algorithms (4 units)</string>
    <string name="cst383">CST 383: Introduction to Data Science (4 units)</string>
    <string name="cst325">CST 325: Graphics Programming (4 units)</string>
    <string name="cst438">CST 438: Software Engineering (4 units)</string>
    <string name="cst462">CST 462: Race, Gender, Class in the Digital World (3 units)</string>
    <string name="cst499">CST 499: Computer Science Capstone (4 units)</string>
    <string name="or">OR</string>
    <string name="directions">Enter a course number to view the description</string>
    <string name="submit">SUBMIT</string>
    <string name="textField">Enter course number</string>

    <string name="cst300_desc">Helps students identify and articulate personal, professional, and social goals. Provides an integrated overview of the computer science and communication design majors and their requirements. Students develop a plan for their learning goals. Students learn writing, presentation, research and critical-thinking skills within the diversified fields of information technology and communication design. Students learn how to analyze, predict, and articulate trends in the academic, public service, [Prereq: (GE Areas A1 and A2 and A3 with a C- or better) and (Junior or Senior Standing)]</string>
    <string name="cst338_desc">Provides students with the fundamental knowledge of computer architectures, hardware and software components of computer systems, interrelationship among different components. Coverage includes introduction to data representation, CPU, assembly programming, memory systems, input/output devices, pipelining, multi-processing systems, operating systems and network architecture. (Prereq: CST 231 and MATH 170 with a C- or better)</string>
    <string name="cst311_desc">Survey of Telecomm and Data Comm Technology Fundamentals, Local Area Network, Wide Area Network, Internet and internetworking protocols including TCP/IP, network security and performance, emerging industry trends such as voice over the network and high speed networking. Designed as a foundation for students who wish to pursue more advanced network studies including certificate programs. Includes hands-on networking labs that incorporate Cisco CCNA lab components. (Prereq: CST 238 and MATH 130 with a C- or better)</string>
    <string name="cst334_desc">Students in this course will learn about the use and design of modern operating systems, focusing on Linux. On the "use" side, students will learn the Linux command line, to write shell scripts, and to build programs with GNU utilities like awk, sed, and make. On the "design" side, students will develop a deep understanding of process management, memory management, file systems, and concurrency, and how they apply to modern technologies like virtualization and cloud computing. (Prereq: CST 238 and MATH 130 with a C- or better)</string>
    <string name="cst336_desc">Provides students with dynamic web application development skills, focusing on the integration of server-side programming, database connectivity, and client-side scripting. Coverage includes the Internet architecture, responsive design, RESTful web services, and Web APIs.  (Prereq: CST 238 with a C- or better)</string>
    <string name="cst363_desc">This course provides balanced coverage of database use and design,focusing on relational databases. Students will learn to design relational schemas, write SQL queries, access a DB programmatically,and perform database administration. Students will gain a working knowledge of the algorithms and data structures used in query evaluation and transaction processing. Students will also learn to apply newer database technologies such as XML, NoSQL, and Hadoop. (Prereq: CST 238 and MATH 130 with a C- or better)</string>
    <string name="cst370_desc">Students learn important data structures in computer science and acquire fundamental algorithm design techniques to get the efficient solutions to several computing problems from various disciplines. Topics include the analysis of algorithm efficiency, hash, heap, graph, tree, sorting and searching, brute force, divide-and-conquer, decrease-and-conquer, transform-and-conquer, dynamic programming, and greedy programming. (Prereq: CST 238 and MATH 170 with a C- or better)</string>
    <string name="cst383_desc">In data science, data analysis and machine learning techniques are applied to visualize data, understand trends, and make predictions. In this course students will learn how to obtain data, preprocess it, apply machine learning methods, and visualize the results. A student who completes the course will have enough theoretical knowledge, and enough skill with modern statistical programming languages and their libraries,to define and perform complete data science projects. (Prereq: CST 238 with a C- or better)</string>
    <string name="cst325_desc">This course teaches the students the fundamentals of game programming and skills needed for game development, including GPU programming, matrix and quaternion algebra for physics calculation, animation, lighting and basics of implementing 3D models into a framework. (Prereq: CST 238 and MATH 130 with a C- or better)</string>
    <string name="cst438_desc">Prepares students for large-scale software development using software engineering principles and techniques. Coverage includes software process, requirements analysis and specification, software design, implementation, testing, and project management. Students are expected to work in teams to carry out a realistic software project. (Prereq: CST 338 with a C- or better)</string>
    <string name="cst462_desc">Provides students with key knowledge of race, gender, class and social justice especially in relation to technology in today\'s digital world. Students challenge the barriers of expertise, gender, race, class, and location that restrict wider access to and understanding of the production and usage of new technologies. Students will engage in a practical experience in the community via their service placements, which will provide depth and context for considering questions of justice, equality, social responsibilities and the complexities of technology and its societal impact. The course uses scenario based approach combining presentations, discussions, and reflections to allow students explore the relationship between critical reflection and action on the topics mentioned above.  (Prereq: GE Areas A1 and A2 and A3 and B4 with a C- or better)</string>
    <string name="cst499_desc">Students will work on a project in large groups (up to 5 students in each group), developing requirements specification, a solution plan followed by design and implementation of the solution. The problem statement for the projects will be selected by the faculty. Faculty will also play the role of a project manager directing the schedule and deliverables for these projects. (Prereq: CST 300 with a C- or better)</string>


</resources>
